# LCMSpector

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LC-Inspector_Processing_Pipeline_Flow_Diagram.md  LICENSE  NUITKA_MIGRATION_PLAN.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION.md  README.md  average.py  benchmark_startup.py  build_nuitka_macos.sh  build_nuitka_windows.bat  demo_optimization.py  ion_list.xlsx  main.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  settings.py  setup.py  test_fixed_optimization.py  test_import.py  test_nuitka_build.py  test_performance.py
.github/: test-data-config.yml
data/: 10mM_UV_VIS_1.txt  2.5mM_UV_VIS_1.txt  PLA51_UV_VIS_1.txt  PLA60_UV_VIS_1.txt  results.csv
docs/: processing_pipeline.md
evaluation/: annotation.py  calc_conc.py  calibration_curves.py  concentrations.py  find_peaks.py  peaks.py
lc-inspector/: LC-Inspector.spec  LCMSpector.spec  OPTIMIZATIONS.md  PERFORMANCE_IMPROVEMENTS.md  REFACTORING.md  __init__.py  build-macos.sh  build-windows.ps1  compare_performance.py  config.json  config.yaml  debug.yaml  icon.icns  logger.yaml  main.py  main_optimized.py  main_refactored.py  nuitka-crash-report.xml  requirements_optimized.txt  settings.py  test_peak_integration.py
lcmspector/: LCMSpector.spec  __init__.py  config.json  icon.icns  main.py  setup.py
lcmspector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lcmspector/ui/: fonts.py  (+8 more)
scripts/: benchmark_memory.py  build_nuitka_macos.sh  generate-requirements.sh  hot_reload.py  iter.py
src/: lib.rs  loading.rs  processing.rs
tests/: GUI-tests-main.py  README.md  STMIX5_02.mzml  STMIX5_02.txt  STMIX5mM-pos.txt  __init__.py  baseline_correction_test.py  conftest.py  construct_xic_test  controller.py  dock-test.py  generic.txt  ms-tests.py  test_preprocessing.py  view.py
training/: preprocess_chromatograms.py  train.py  training_data.xlsx
utils/: average.py  list_files.py  load_data.py  loading.py  normalize.py  preprocessing.py
(+142 files in other folders)
