[project]
authors = [{ name = "Mateusz Fido", email = "mafido@ethz.ch" }]
maintainers = [{ name = "Mateusz Fido", email = "mafido@ethz.ch" }]
name = "lcmspector"
version = "0.11.3"
requires-python = ">= 3.11"
dependencies = [
  "numpy==2.3.1",
  "pandas==2.3.1",
  "PySide6==6.8.3",
  "pyqtgraph==0.13.7",
  "pyteomics==4.7.2",
  "pytest==8.4.1",
  "PyYAML==6.0.2",
  "scipy==1.16.0",
  "static_frame",
  "lxml",
  "pydantic>=2.12.5",
]

[tool.pytest.ini_option]
pythonpath = "lcmspector"
addopts = [
  "--import-mode=importlib",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "zstandard>=0.25.0",
]
