[project]
authors = [{ name = "Mateusz Fido", email = "mafido@ethz.ch" }]
maintainers = [{ name = "Mateusz Fido", email = "mafido@ethz.ch" }]
name = "lcmspector"
version = "0.11.3"
requires-python = ">= 3.13"
dependencies = [
  "numpy>=2.4.1",
  "pandas>=3.0.0",
  "PySide6>=6.10.1",
  "pyqtgraph>=0.14.0",
  "pyteomics>=4.7.5",
  "pytest>=9.0.2",
  "PyYAML>=6.0.3",
  "scipy>=1.17.0",
  "static_frame>=3.6.0",
  "lxml>=6.0.2",
  "pydantic>=2.12.5",
]

[tool.pytest.ini_option]
pythonpath = "lcmspector"
addopts = ["--import-mode=importlib"]

[dependency-groups]
dev = ["nuitka>=2.8.9", "zstandard>=0.25.0"]
